--- a/html5/index.html
+++ b/html5/index.html
@@ -8,12 +8,13 @@
 </head>
 <style type="text/css" >
 
-   
+*{margin: 0px}
+
 </style>
 <body style="margin: 0; margin-top:0px; margin-left:auto; margin-right:auto; padding: 0;    background-color: black; border:0px black solid;">
 
 
-    <p align="center"><canvas align="center" style="outline: none;" id='khanvas'  width= 1280; height= 720; margin= 0;></canvas></p>
+    <p align="center"><canvas align="center"; align ="top"; style="outline:none;" id='khanvas' ; width=1280; height= 720;></canvas></p>
 
     <script src='kha.js'></script>
 </body>
