--- a/horsy/html5/index.html
+++ b/horsy/html5/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
     <meta charset="utf-8"/>
     <title>Armory</title>
 </head>
-<body style="margin: 0; padding: 0;">
+<style type="text/css" >
+*{margin: 0px}
+</style>
+<body style="margin: 0; margin-top:0px; margin-left:auto; margin-right:auto; padding: 0;    background-color: black; border:0px black solid;">
 
-    <p align="center"><canvas align="center" style="outline: none;" id='khanvas' width='1920' height='1080'></canvas></p>
+
+    <p align="center"><canvas align="center"; align ="top"; style="outline:none;" id='khanvas' ; width=1280; height= 720;></canvas></p>
 
     <script src='kha.js'></script>
 </body>
