--- a/audioplay/index.html
+++ b/audioplay/index.html
@@ -14,12 +14,11 @@ myAudio=document.getElementById("audio1");
 window.onload = function () {
   myAudio.play();
   myAudio.currentTime=72;
-  }
+  console.log(myaudio.currentTime);
+}
 
-function setCurTime() { 
-  myAudio.currentTime=timex;
-  myAudio.play();
-  } 
+
+
 </script> 
 </body> 
 </html>
