--- a/audioplay/index.html
+++ b/audioplay/index.html
@@ -13,8 +13,8 @@ myAudio=document.getElementById("audio1");
 
 window.onload = function () {
   myAudio.play();
-  myAudio.currentTime=72;
-  console.log(myaudio.currentTime);
+  var timeplay = myAudio.currentTime=72;
+  console.log(timeplay);
 }
 
 
