--- a/audioplay/index.html
+++ b/audioplay/index.html
@@ -13,7 +13,7 @@ myAudio=document.getElementById("audio1");
 
 window.onload = function () {
   myAudio.play();
-  var timeplay = myAudio.currentTime=72;
+  myAudio.currentTime=72;
   console.log(timeplay);
 }
 
